--- a/depthchart.html
+++ b/depthchart.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Giants Schedule</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+       <link rel="stylesheet" type="text/css" href="css/flexbox.css">
 </head>
 
 <body>
