--- a/newsletter.html
+++ b/newsletter.html
@@ -22,6 +22,11 @@
 
     <main>
         <form action="results.html">
+
+            <div class="centered">
+                <form action="results.html">
+                </form>
+            </div>
             <p>
                 <label for="firstname">First Name: </label>
                 <input type="text" name="firstname" id="firstname">
@@ -78,6 +83,4 @@
         <footer style="color:red"> saquonbarkleybeast26@gmail.com</footer>
     </footer>
 
-</body>
-
-</html>
+</body></html>
